修复文章详情页中TODO List 未正常显示的问题

--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -708,6 +708,16 @@ table tr:nth-child(2n), thead {
     min-width: 80px;
 }
 
+#articleContent [type="checkbox"]:not(:checked), [type="checkbox"]:checked {
+    position: inherit;
+    margin-left: -1.3rem;
+    margin-right: 0.4rem;
+    margin-top: -1px;
+    vertical-align: middle;
+    left: unset;
+    visibility: visible;
+}
+
 #article-share .social-share {
     text-align: center;
     margin-top: 20px;
