--- a/layout/tag.ejs
+++ b/layout/tag.ejs
@@ -2,7 +2,7 @@
 
 <main class="content">
 
-    <%- partial('_partial/tag-cloud') %>
+    <%- partial('_widget/tag-cloud') %>
 
     <div class="container">
         <%
