主题各个细节点的优化

--- a/layout/_partial/prev-next.ejs
+++ b/layout/_partial/prev-next.ejs
@@ -57,7 +57,7 @@ var featureImages = theme.featureImages;
                     <% if(page.prev.tags && page.prev.tags.length) { %>
                     <div class="card-action article-tags">
                         <% page.prev.tags.forEach(tag => { %>
-                        <a href="<%- tag.permalink %>"><span class="chip bg-color"><%= tag.name %></span></a>
+                        <a href="<%- url_for(tag.path) %>"><span class="chip bg-color"><%= tag.name %></span></a>
                         <% }); %>
                     </div>
                     <% } %>
@@ -103,7 +103,7 @@ var featureImages = theme.featureImages;
                     <% if(page.tags && page.tags.length) { %>
                     <div class="card-action article-tags">
                         <% page.tags.forEach(tag => { %>
-                        <a href="<%- tag.permalink %>"><span class="chip bg-color"><%= tag.name %></span></a>
+                        <a href="<%- url_for(tag.path) %>"><span class="chip bg-color"><%= tag.name %></span></a>
                         <% }); %>
                     </div>
                     <% } %>
@@ -150,7 +150,7 @@ var featureImages = theme.featureImages;
                     <% if(page.next.tags && page.next.tags.length) { %>
                     <div class="card-action article-tags">
                         <% page.next.tags.forEach(tag => { %>
-                        <a href="<%- tag.permalink %>"><span class="chip bg-color"><%= tag.name %></span></a>
+                        <a href="<%- url_for(tag.path) %>"><span class="chip bg-color"><%= tag.name %></span></a>
                         <% }); %>
                     </div>
                     <% } %>
@@ -196,7 +196,7 @@ var featureImages = theme.featureImages;
                     <% if(page.tags && page.tags.length) { %>
                     <div class="card-action article-tags">
                         <% page.tags.forEach(tag => { %>
-                        <a href="<%- tag.permalink %>"><span class="chip bg-color"><%= tag.name %></span></a>
+                        <a href="<%- url_for(tag.path) %>"><span class="chip bg-color"><%= tag.name %></span></a>
                         <% }); %>
                     </div>
                     <% } %>
