--- a/layout/tag.ejs
+++ b/layout/tag.ejs
@@ -32,7 +32,7 @@
                     }
                     var tags = tagArr.join(', ');
                 %>
-                <div class="article tag-post col s12 m6 l4" data-tags="<%- tags %>">
+                <div class="article tag-post col s12 m6 l4" data-tags="<%- tags %>" data-aos="fade-up">
                     <div class="card">
                         <a href="<%- url_for(post.path) %>">
                             <div class="card-image tag-image">
