--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -28,44 +28,44 @@ body {
 }
 
 h1 {
-    font-size: 1.85rem;
+    margin: 45px 0 24px -5px;
+    font-size: 1.9rem;
     font-weight: bold;
     line-height: 2.2rem;
-    margin-left: -7px;
 }
 
 h2 {
+    margin: 40px 0 20px -5px;
     font-size: 1.65rem;
     font-weight: bold;
     line-height: 1.9rem;
-    margin-left: -6px;
 }
 
 h3 {
+    margin: 35px 0 18px -4px;
     font-size: 1.45rem;
     font-weight: bold;
     line-height: 1.7rem;
-    margin-left: -5px;
 }
 
 h4 {
+    margin: 30px 0 12px -4px;
     font-size: 1.25rem;
     font-weight: bold;
     line-height: 1.5rem;
-    margin-left: -5px;
 }
 
 h5 {
+    margin: 25px 0 8px -4px;
     font-size: 1.1rem;
     font-weight: bold;
     line-height: 1.4rem;
-    margin-left: -4px;
 }
 
 h6 {
+    margin: 20px 0 4px -4px;
     font-size: 1rem;
     line-height: 1.3rem;
-    margin-left: -4px;
 }
 
 p {
@@ -74,24 +74,24 @@ p {
 }
 
 hr {
-    margin: 12px 0;
+    margin: 20px 0;
     border: 0;
     border-top: 1px solid #ccc;
 }
 
 blockquote {
     border-left: 5px solid #42b983;
-    padding: 1rem 0.8rem 1rem 0.8rem;
+    padding: 1rem 0.8rem 0.1rem 0.8rem;
     color: #666;
     background-color: rgba(66, 185, 131, .1);
 }
 
 pre {
-    padding: 1.2em;
-    margin: .5em 0;
+    padding: 1.5rem !important;
+    margin: 1rem 0 !important;
     background: #272822;
     overflow: auto;
-    border-radius: 0.3em;
+    border-radius: 0.35rem;
     tab-size: 4;
 }
 
@@ -630,7 +630,7 @@ article .article-tags .chip {
 }
 
 #artDetail .reprint {
-    margin-top: 15px;
+    margin: 15px 0 5px 0;
 }
 
 #artDetail .reprint .reprint-tip {
@@ -648,7 +648,7 @@ article .article-tags .chip {
 #articleContent p {
     margin: 2px 2px 10px;
     font-size: 1.05rem;
-    line-height: 1.78rem;
+    line-height: 1.85rem;
 }
 
 #articleContent blockquote p {
@@ -720,7 +720,7 @@ table tr:nth-child(2n), thead {
 
 #article-share .social-share {
     text-align: center;
-    margin-top: 20px;
+    margin: 30px 0;
 }
 
 @media only screen and (min-width: 600px) {
@@ -823,7 +823,7 @@ table tr:nth-child(2n), thead {
 
 #cd-timeline {
     /*width: 90%;*/
-    max-width: 850px;
+    max-width: 800px;
     position: relative;
     margin-top: 2rem;
     margin-bottom: 2rem;
