--- a/source/css/matery.css
+++ b/source/css/matery.css
@@ -598,7 +598,7 @@ article .article-tags .chip {
     float: left;
 }
 
-#artDetail .author-info {
+#artDetail .post-info {
     float: right;
 }
 
@@ -613,7 +613,17 @@ article .article-tags .chip {
     margin-bottom: 2px;
 }
 
-#artDetail .author-info span {
+#artDetail .post-info .post-cate {
+    margin-right: 15px;
+    color: #525f7f;
+}
+
+#artDetail .post-info .post-category {
+    padding-right: 4px;
+    color: #525f7f;
+}
+
+#artDetail .post-info .post-date {
     color: #525f7f;
 }
 
