新增关于我的页面的基础信息显示

--- a/layout/_partial/mobile-nav.ejs
+++ b/layout/_partial/mobile-nav.ejs
@@ -1,4 +1,5 @@
 <div class="side-nav" id="mobile-nav">
+
     <div class="mobile-head bg-color">
         <% if (theme.logo !== undefined && theme.logo.length > 0) { %>
         <img src="<%= theme.logo %>" class="logo-img circle responsive-img">
@@ -12,6 +13,7 @@
             <% } %>
         </div>
     </div>
+
     <ul class="menu-list">
         <% Object.keys(theme.menu).forEach(function(key) { %>
         <li>
@@ -21,17 +23,6 @@
         </li>
         <% }); %>
     </ul>
-    <div class="social-link">
-        <a href="https://github.com/blinkfox" class="tooltipped" target="_blank" data-tooltip="访问我的GitHub"
-           data-position="top" data-delay="50">
-            <i class="fa fa-github fa-lg"></i>
-        </a>
-        <a href="mailto:chenjiayin1990@163.com" class="tooltipped" target="_blank" data-tooltip="邮件联系我"
-           data-position="top" data-delay="50">
-            <i class="fa fa-envelope fa-lg"></i>
-        </a>
-        <a href="#!" class="tooltipped" data-tooltip="QQ联系我：1181062873" data-position="top" data-delay="50">
-            <i class="fa fa-qq fa-lg"></i>
-        </a>
-    </div>
+
+    <div class="social-link"><%- partial('_partial/social-link') %></div>
 </div>
