--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -19,6 +19,7 @@
     <link rel="stylesheet" type="text/css" href="/libs/lightGallery/css/lightgallery.min.css">
     <link rel="stylesheet" type="text/css" href="/css/matery.css">
     <link rel="stylesheet" type="text/css" href="/css/my.css">
+    <link rel="stylesheet" type="text/css" href="/css/github-link.css">
 
     <script src="/libs/jquery/jquery-2.2.0.min.js"></script>
 </head>
