--- a/layout/_partial/social-link.ejs
+++ b/layout/_partial/social-link.ejs
@@ -1,9 +1,9 @@
 <a href="https://github.com/blinkfox" class="tooltipped" target="_blank" data-tooltip="访问我的GitHub" data-position="top" data-delay="50">
-    <i class="fa fa-github fa-lg"></i>
+    <i class="fa fa-github"></i>
 </a>
 <a href="mailto:chenjiayin1990@163.com" class="tooltipped" target="_blank" data-tooltip="邮件联系我" data-position="top" data-delay="50">
-    <i class="fa fa-envelope fa-lg"></i>
+    <i class="fa fa-envelope-open"></i>
 </a>
 <a href="#!" class="tooltipped" data-tooltip="QQ联系我: 1181062873" data-position="top" data-delay="50">
-    <i class="fa fa-qq fa-lg"></i>
+    <i class="fa fa-qq"></i>
 </a>
