增加手机端的章鱼猫隐藏

--- a/layout/_partial/mobile-nav.ejs
+++ b/layout/_partial/mobile-nav.ejs
@@ -20,6 +20,14 @@
             </a>
         </li>
         <% }); %>
+        <% if (theme.githubLink.enable) { %>
+        <li><div class="divider"></div></li>
+        <li>
+            <a href="<%= theme.githubLink.link %> %>" class="waves-effect waves-light">
+                <i class="fa  fa fa-github fa-lg fa-fw"></i><%= theme.githubLink.title %>
+            </a>
+        </li>
+        <% } %>
     </ul>
     <div class="social-link">
         <a href="https://github.com/blinkfox" class="tooltipped" target="_blank" data-tooltip="访问我的GitHub"
